# BlendTransforms

./: BUILDING.md  CMakeLists.txt  README.md  USING.md  clean.bat
examples/: Face_Rig_Done.ma  Face_TestAnim.ma
install/2013/plug-ins/: BlendTransforms.mll
install/2013/scripts/: BlendTransforms.py  BlendTransforms.ui
install/2015/plug-ins/: BlendTransforms.mll
install/2015/scripts/: BlendTransforms.mel
install/2016/plug-ins/: BlendTransforms.mll
install/2016/prefs/shelves/: shelf_BlendTransforms.mel
install/2016/scripts/: BlendTransforms.mel  BlendTransforms.py
modules/: FindMaya.cmake
src/: BlendTransforms.cpp  BlendTransforms.h  CMakeLists.txt  pluginMain.cpp
